--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 server.port=9091
-
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/test
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-
 spring2.datasource2.username=postgres
 spring2.datasource2.password=root
 spring2.datasource2.jdbcUrl=jdbc:postgresql://localhost:5433/test
 #spring2.datasource.driver-class-name=org.postgresql.ds.PGSimpleDataSource
-
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
